--- a/templates/result.html
+++ b/templates/result.html
@@ -23,11 +23,11 @@
 
 <script>
     function deleteFile(fileName) {
-        if (confirm('Вы уверены, что хотите удалить файл "' + fileName + '"?')) {
+        if (confirm('Are you sure you want to delete the file "' + fileName + '"?')) {
             fetch('/delete_file/', {
                 method: 'POST',
                 headers: {
-                    'X-CSRFToken': '{{ csrf_token }}', // Добавляем CSRF-токен
+                    'X-CSRFToken': '{{ csrf_token }}', // Add a CSRF-token
                     'Content-Type': 'application/x-www-form-urlencoded',
                 },
                 body: 'file_name=' + fileName,
@@ -35,10 +35,10 @@
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    // Обновляем страницу после успешного удаления
+                    // Update the page after successful deletion
                     location.reload();
                 } else {
-                    alert('Не удалось удалить файл.');
+                    alert('Failed to delete file!');
                 }
             });
         }
