--- a/templates/result.html
+++ b/templates/result.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <a href="{% url 'index' %}">&lt;&lt; Go Back</a>
         <header>RESULTS</header>
         <div class="content">
             <ul class="links">
