Add Edit app settings feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                 {% endfor %}
             {% endif %}
         </div>
-
+        <a href="{% url 'edit_settings' %}" target="_blank">SETTINGS</a>
     </div>
 </body>
 
@@ -201,6 +201,5 @@ window.onload = () => {
         alert(warningNumbersText);
     }
 };
-
 
 </script>
