--- a/templates/result.html
+++ b/templates/result.html
@@ -16,7 +16,7 @@
         <div class="content">
             <ul class="links">
                 {% for file_name in result_files %}
-                    <li class="details">
+                    <li class="details" data-file="{{ file_name }}">
 <!--                        if download files only from the shared directory-->
 <!--                        <a class="name" href="{{ file_name }}" download>Download {{ file_name }}</a>-->
                         <a class="name" href="{% url 'download_file' file_name %}">Download {{ file_name }}</a>
@@ -26,6 +26,12 @@
                     </li>
                 {% endfor %}
             </ul>
+            <br>
+            <div class="mainButton" {% if not has_files %}style="display: none;"{% endif %}>
+                <button class="delete" onclick="deleteAllFiles()">
+                    <span class="btn-text" user-select="none">Delete All</span>
+                </button>
+            </div>
 <!--            <div class="mainButton">-->
 <!--                <button class="download">-->
 <!--                    <span class="btn-text" user-select="none">Download All</span>-->
@@ -41,13 +47,15 @@
 <script>
     function deleteFile(fileName) {
         if (confirm('Are you sure you want to delete the file "' + fileName + '"?')) {
+
             fetch('/delete_file/', {
                 method: 'POST',
                 headers: {
                     'X-CSRFToken': '{{ csrf_token }}', // Add a CSRF-token
-                    'Content-Type': 'application/x-www-form-urlencoded',
+                    'Content-Type': 'application/json',
                 },
-                body: 'file_name=' + fileName,
+                // Send an array with a single file name
+                body: JSON.stringify({ file_names: [fileName] }),
             })
             .then(response => response.json())
             .then(data => {
@@ -60,4 +68,31 @@
             });
         }
     }
+
+    function deleteAllFiles() {
+        if (confirm('Are you sure you want to delete all files?')) {
+            const fileElements = document.querySelectorAll('.details');
+            const fileNames = Array.from(fileElements).map(element => element.dataset.file);
+
+            fetch('/delete_file/', {
+                method: 'POST',
+                headers: {
+                    'X-CSRFToken': '{{ csrf_token }}', // Add a CSRF-token
+                    'Content-Type': 'application/json',
+                },
+                // Send an array of file names
+                body: JSON.stringify({ file_names: fileNames }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    // Update the page after successful deletion
+                    location.reload();
+                } else {
+                    alert('Failed to delete files!');
+                }
+            });
+        }
+    }
+
 </script>
